# DashBoardUSElection

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: fips.csv
dataset/: get_dataset.py
helpers/: cdf_plot.py  pdf_plot.py
pages/: 3_Hipotese5.py  4_Educação_x_Partido_de_Voto.py  Democrats_x_Republicans.py  Educacao_x_Partido_de_Voto.py  Education_level_x_Party.py  Ethnicity_x_Party.py  Etnia_X_Party.py  Etnia_X_Vote.py  Income x Party.py  Income_Distribution.py  Income_x_Party.py
