[project]
name = "dashboarduselection"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "kagglehub (>=0.3.6,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
